// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Screens renders the Change Password screen 1`] = `
<RCTScrollView
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  style={
    Object {
      "backgroundColor": "#f0efef",
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "#010101",
            "fontStyle": "normal",
            "lineHeight": 30,
            "padding": 30,
            "textAlign": "center",
          },
          Object {
            "fontSize": 25,
          },
        ]
      }
    >
      Enter Old and New Password
    </Text>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Old Password
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#00aeef"
        iconName="unlock-alt"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        label="Old Password"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#00aeef",
              "marginLeft": 56,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          New Password
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#00aeef"
        iconName="lock"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        label="New Password"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#00aeef",
              "marginLeft": 56,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingTop": 10,
        }
      }
    >
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "height": 50,
            "opacity": 1,
            "width": 200,
            "zIndex": 10,
          }
        }
        testID="aws-btn-content-view"
      >
        <View
          style={
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0.15)",
              "borderBottomLeftRadius": null,
              "borderBottomRightRadius": null,
              "borderRadius": 4,
              "borderTopLeftRadius": null,
              "borderTopRightRadius": null,
              "bottom": -2,
              "height": 46,
              "left": "1%",
              "position": "absolute",
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
              "width": "98%",
            }
          }
          testID="aws-btn-shadow"
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
              },
              Object {
                "backgroundColor": "#9f9f9f",
                "borderBottomLeftRadius": null,
                "borderBottomRightRadius": null,
                "borderRadius": 4,
                "borderTopLeftRadius": null,
                "borderTopRightRadius": null,
                "height": 46,
                "width": 200,
              },
            ]
          }
          testID="aws-btn-bottom"
        />
        <View
          style={
            Object {
              "borderBottomLeftRadius": null,
              "borderBottomRightRadius": null,
              "borderRadius": 4,
              "borderTopLeftRadius": null,
              "borderTopRightRadius": null,
              "height": 46,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
              "width": 200,
            }
          }
          testID="aws-btn-content"
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "zIndex": 3,
                },
                Object {
                  "backgroundColor": "#ffbc27",
                  "borderBottomLeftRadius": null,
                  "borderBottomRightRadius": null,
                  "borderColor": null,
                  "borderRadius": 4,
                  "borderTopLeftRadius": null,
                  "borderTopRightRadius": null,
                  "borderWidth": 0,
                },
              ]
            }
            testID="aws-btn-text"
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.15)",
                  "height": 46,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 200,
                }
              }
              testID="aws-btn-active-background"
            />
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": null,
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "opacity": 1,
                  "paddingBottom": 0,
                  "paddingHorizontal": 12,
                  "paddingTop": 0,
                  "textAlign": "center",
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": "100%",
                  "zIndex": 10,
                }
              }
              testID="aws-btn-content-text"
            >
              Change Password
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`App Screens renders the Create Profile screen 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#f0efef",
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "#010101",
            "fontStyle": "normal",
            "lineHeight": 30,
            "padding": 30,
            "textAlign": "center",
          },
          Object {
            "fontSize": 25,
          },
          Object {
            "marginTop": 25,
          },
        ]
      }
    >
      Hey 
      ! Let's get to know who you really are!
    </Text>
    <View
      accessible={true}
      focusable={true}
      isTVSelectable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "alignSelf": "center",
          "borderRadius": 86,
          "height": 172,
          "marginBottom": 18,
          "opacity": 1,
          "width": 172,
        }
      }
    >
      <Image
        source={
          Object {
            "uri": "https://drive.google.com/uc?id=10636HqgLPNXx1FFMxkK2ik0T4KmfAw30",
          }
        }
        style={
          Object {
            "alignSelf": "center",
            "borderColor": "black",
            "borderRadius": 36,
            "borderWidth": 1,
            "height": 132,
            "marginBottom": 18,
            "width": 132,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Phone-Number
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#2AC062"
        iconName="phone"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        inputStyle={
          Object {
            "padding": 5,
          }
        }
        label="Phone-Number"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#2AC062",
              "marginLeft": 56,
            },
            Object {
              "padding": 5,
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Birthday
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#e06e9a"
        iconName="birthday-cake"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        inputStyle={
          Object {
            "padding": 5,
          }
        }
        label="Birthday"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#e06e9a",
              "marginLeft": 56,
            },
            Object {
              "padding": 5,
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Short BIO
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#c8e3e7"
        iconName="pencil"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        inputStyle={
          Object {
            "padding": 5,
          }
        }
        label="Short BIO"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#c8e3e7",
              "marginLeft": 56,
            },
            Object {
              "padding": 5,
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Some Places You've Been
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#a0c9cf"
        iconName="location-arrow"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        inputStyle={
          Object {
            "padding": 5,
          }
        }
        label="Some Places You've Been"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#a0c9cf",
              "marginLeft": 56,
            },
            Object {
              "padding": 5,
            },
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <Text>
      
    </Text>
    <View>
      <View
        accessibilityRole="button"
        accessibilityStates={Array []}
        accessible={true}
        focusable={true}
        isTVSelectable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "opacity": 1,
          }
        }
      >
        <View
          style={
            Array [
              Object {},
            ]
          }
        >
          <Text
            style={
              Array [
                Object {
                  "color": "#007AFF",
                  "fontSize": 18,
                  "padding": 8,
                  "textAlign": "center",
                },
              ]
            }
          >
            Create Profile
          </Text>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`App Screens renders the Log in screen 1`] = `
<RCTScrollView
  collapsable={false}
  onGestureHandlerEvent={[Function]}
  onGestureHandlerStateChange={[Function]}
  style={
    Object {
      "backgroundColor": "#f0efef",
      "flex": 1,
    }
  }
>
  <View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingTop": 10,
        }
      }
    >
      <Image
        source={1}
        style={
          Object {
            "height": 200,
            "resizeMode": "contain",
            "width": 300,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "borderBottomColor": "#b9c1ca",
            "borderBottomWidth": 2,
          },
          undefined,
          Object {
            "height": 66,
            "width": null,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        borderColor="#c8e3e7"
        borderHeight={5}
        height={48}
        inputPadding={18}
        label="Email"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "bottom": 2,
              "color": "#6a7989",
              "fontSize": 18,
              "fontWeight": "bold",
              "padding": 0,
              "position": "absolute",
            },
            undefined,
            Object {
              "height": 48,
              "left": 18,
              "width": null,
            },
          ]
        }
        testID="email_text_box"
        underlineColorAndroid="transparent"
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "left": 18,
            "opacity": 1,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#6a7989",
                "fontSize": 16,
              },
              undefined,
            ]
          }
        >
          Email
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "height": 24,
            },
            Object {
              "backgroundColor": undefined,
              "width": 18,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#c8e3e7",
            "bottom": 0,
            "height": 5,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "borderBottomColor": "#b9c1ca",
            "borderBottomWidth": 2,
          },
          undefined,
          Object {
            "height": 64,
            "width": null,
          },
        ]
      }
    >
      <TextInput
        allowFontScaling={true}
        autoCapitalize="none"
        borderColor="#ffbc27"
        borderHeight={5}
        height={48}
        inputPadding={16}
        label="Password"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "bottom": 2,
              "color": "#6a7989",
              "fontSize": 18,
              "fontWeight": "bold",
              "padding": 0,
              "position": "absolute",
            },
            undefined,
            Object {
              "height": 48,
              "left": 16,
              "width": null,
            },
          ]
        }
        testID="pass_text_box"
        underlineColorAndroid="transparent"
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "left": 16,
            "opacity": 1,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#6a7989",
                "fontSize": 16,
              },
              undefined,
            ]
          }
        >
          Password
        </Text>
      </View>
      <View
        style={
          Array [
            Object {
              "height": 24,
            },
            Object {
              "backgroundColor": undefined,
              "width": 16,
            },
          ]
        }
      />
      <View
        style={
          Object {
            "backgroundColor": "#ffbc27",
            "bottom": 0,
            "height": 5,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "width": 0,
          }
        }
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "red",
            "fontSize": 15,
            "marginVertical": 10,
          }
        }
      >
        
      </Text>
      <View
        style={
          Object {
            "padding": 10,
          }
        }
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 50,
              "opacity": 1,
              "width": 200,
              "zIndex": 10,
            }
          }
          testID="aws-btn-content-view"
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.15)",
                "borderBottomLeftRadius": null,
                "borderBottomRightRadius": null,
                "borderRadius": 4,
                "borderTopLeftRadius": null,
                "borderTopRightRadius": null,
                "bottom": -2,
                "height": 46,
                "left": "1%",
                "position": "absolute",
                "transform": Array [
                  Object {
                    "translateY": 0,
                  },
                ],
                "width": "98%",
              }
            }
            testID="aws-btn-shadow"
          />
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                },
                Object {
                  "backgroundColor": "#9f9f9f",
                  "borderBottomLeftRadius": null,
                  "borderBottomRightRadius": null,
                  "borderRadius": 4,
                  "borderTopLeftRadius": null,
                  "borderTopRightRadius": null,
                  "height": 46,
                  "width": 200,
                },
              ]
            }
            testID="aws-btn-bottom"
          />
          <View
            style={
              Object {
                "borderBottomLeftRadius": null,
                "borderBottomRightRadius": null,
                "borderRadius": 4,
                "borderTopLeftRadius": null,
                "borderTopRightRadius": null,
                "height": 46,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "transform": Array [
                  Object {
                    "translateY": 0,
                  },
                ],
                "width": 200,
              }
            }
            testID="aws-btn-content"
          >
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "zIndex": 3,
                  },
                  Object {
                    "backgroundColor": "#c8e3e7",
                    "borderBottomLeftRadius": null,
                    "borderBottomRightRadius": null,
                    "borderColor": null,
                    "borderRadius": 4,
                    "borderTopLeftRadius": null,
                    "borderTopRightRadius": null,
                    "borderWidth": 0,
                  },
                ]
              }
              testID="aws-btn-text"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(0, 0, 0, 0.15)",
                    "height": 46,
                    "left": 0,
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 200,
                  }
                }
                testID="aws-btn-active-background"
              />
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": null,
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "opacity": 1,
                    "paddingBottom": 0,
                    "paddingHorizontal": 12,
                    "paddingTop": 0,
                    "textAlign": "center",
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                    ],
                    "width": "100%",
                    "zIndex": 10,
                  }
                }
                testID="aws-btn-content-text"
              >
                Login
              </Text>
            </View>
          </View>
        </View>
      </View>
      <View
        style={
          Object {
            "padding": 10,
          }
        }
        testID="signup_button"
      >
        <View
          accessible={true}
          focusable={false}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "transparent",
              "height": 50,
              "opacity": 1,
              "width": 200,
              "zIndex": 10,
            }
          }
          testID="aws-btn-content-view"
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.15)",
                "borderBottomLeftRadius": null,
                "borderBottomRightRadius": null,
                "borderRadius": 4,
                "borderTopLeftRadius": null,
                "borderTopRightRadius": null,
                "bottom": -2,
                "height": 46,
                "left": "1%",
                "position": "absolute",
                "transform": Array [
                  Object {
                    "translateY": 0,
                  },
                ],
                "width": "98%",
              }
            }
            testID="aws-btn-shadow"
          />
          <View
            style={
              Array [
                Object {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                },
                Object {
                  "backgroundColor": "#9f9f9f",
                  "borderBottomLeftRadius": null,
                  "borderBottomRightRadius": null,
                  "borderRadius": 4,
                  "borderTopLeftRadius": null,
                  "borderTopRightRadius": null,
                  "height": 46,
                  "width": 200,
                },
              ]
            }
            testID="aws-btn-bottom"
          />
          <View
            style={
              Object {
                "borderBottomLeftRadius": null,
                "borderBottomRightRadius": null,
                "borderRadius": 4,
                "borderTopLeftRadius": null,
                "borderTopRightRadius": null,
                "height": 46,
                "left": 0,
                "position": "absolute",
                "top": 0,
                "transform": Array [
                  Object {
                    "translateY": 0,
                  },
                ],
                "width": 200,
              }
            }
            testID="aws-btn-content"
          >
            <View
              onLayout={[Function]}
              style={
                Array [
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "justifyContent": "center",
                    "overflow": "hidden",
                    "zIndex": 3,
                  },
                  Object {
                    "backgroundColor": "#ffbc27",
                    "borderBottomLeftRadius": null,
                    "borderBottomRightRadius": null,
                    "borderColor": null,
                    "borderRadius": 4,
                    "borderTopLeftRadius": null,
                    "borderTopRightRadius": null,
                    "borderWidth": 0,
                  },
                ]
              }
              testID="aws-btn-text"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(0, 0, 0, 0.15)",
                    "height": 46,
                    "left": 0,
                    "opacity": 0,
                    "position": "absolute",
                    "top": 0,
                    "width": 200,
                  }
                }
                testID="aws-btn-active-background"
              />
              <Text
                style={
                  Object {
                    "color": "#FFFFFF",
                    "fontFamily": null,
                    "fontSize": 14,
                    "fontWeight": "bold",
                    "opacity": 1,
                    "paddingBottom": 0,
                    "paddingHorizontal": 12,
                    "paddingTop": 0,
                    "textAlign": "center",
                    "transform": Array [
                      Object {
                        "scale": 1,
                      },
                    ],
                    "width": "100%",
                    "zIndex": 10,
                  }
                }
                testID="aws-btn-content-text"
              >
                Sign Up!
              </Text>
            </View>
          </View>
        </View>
      </View>
      <Text
        style={
          Object {
            "padding": 10,
          }
        }
        testID="login"
      >
        New user? Sign up now!
      </Text>
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "height": 30,
            "opacity": 1,
            "width": 160,
            "zIndex": 10,
          }
        }
        testID="aws-btn-content-view"
      >
        <View
          style={
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0.15)",
              "borderBottomLeftRadius": null,
              "borderBottomRightRadius": null,
              "borderRadius": 4,
              "borderTopLeftRadius": null,
              "borderTopRightRadius": null,
              "bottom": -2,
              "height": 26,
              "left": "1%",
              "position": "absolute",
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
              "width": "98%",
            }
          }
          testID="aws-btn-shadow"
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
              },
              Object {
                "backgroundColor": "#9f9f9f",
                "borderBottomLeftRadius": null,
                "borderBottomRightRadius": null,
                "borderRadius": 4,
                "borderTopLeftRadius": null,
                "borderTopRightRadius": null,
                "height": 26,
                "width": 160,
              },
            ]
          }
          testID="aws-btn-bottom"
        />
        <View
          style={
            Object {
              "borderBottomLeftRadius": null,
              "borderBottomRightRadius": null,
              "borderRadius": 4,
              "borderTopLeftRadius": null,
              "borderTopRightRadius": null,
              "height": 26,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
              "width": 160,
            }
          }
          testID="aws-btn-content"
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "zIndex": 3,
                },
                Object {
                  "backgroundColor": "#478a91",
                  "borderBottomLeftRadius": null,
                  "borderBottomRightRadius": null,
                  "borderColor": null,
                  "borderRadius": 4,
                  "borderTopLeftRadius": null,
                  "borderTopRightRadius": null,
                  "borderWidth": 0,
                },
              ]
            }
            testID="aws-btn-text"
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.15)",
                  "height": 26,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 160,
                }
              }
              testID="aws-btn-active-background"
            />
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": null,
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "opacity": 1,
                  "paddingBottom": 0,
                  "paddingHorizontal": 12,
                  "paddingTop": 0,
                  "textAlign": "center",
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": "100%",
                  "zIndex": 10,
                }
              }
              testID="aws-btn-content-text"
            >
              Forgot Password?
            </Text>
          </View>
        </View>
      </View>
      <View
        style={
          Array [
            Object {
              "padding": 15,
            },
            Object {
              "flexDirection": "row",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "marginHorizontal": 10,
            }
          }
        >
          <Text />
        </View>
        <View>
          <Text />
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`App Screens renders the Reset Password screen 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#f0efef",
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#010101",
          "fontStyle": "normal",
          "lineHeight": 30,
          "padding": 30,
          "textAlign": "center",
        },
        Object {
          "fontSize": 35,
        },
      ]
    }
  >
    Trouble Logging In?
  </Text>
  <Text
    style={
      Object {
        "padding": 10,
      }
    }
  >
    Enter your email below and we'll send you a link to reset your password.
  </Text>
  <View
    onLayout={[Function]}
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "overflow": "hidden",
          "paddingTop": 16,
        },
        undefined,
        Object {
          "height": 64,
        },
      ]
    }
  >
    <Text />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#f0f0f0",
            "position": "absolute",
            "top": 8,
            "width": 1,
          },
          Object {
            "height": 48,
            "left": 48,
          },
        ]
      }
    />
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "height": 48,
          "left": 56,
          "position": "absolute",
          "top": 24,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "rgba(105, 105, 105, 1)",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Email
      </Text>
    </View>
    <TextInput
      allowFontScaling={true}
      animationDuration={300}
      height={48}
      iconClass={[Function]}
      iconColor="#478a91"
      iconName="envelope-square"
      iconSize={20}
      iconWidth={40}
      inputPadding={16}
      inputStyle={
        Object {
          "padding": 10,
        }
      }
      label="Email"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      passiveIconColor="#a3a3a3"
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "black",
            "flex": 1,
            "fontSize": 18,
            "padding": 7,
            "paddingLeft": 0,
          },
          Object {
            "color": "#478a91",
            "marginLeft": 56,
          },
          Object {
            "padding": 10,
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Object {
        "padding": 10,
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "backgroundColor": "transparent",
          "height": 30,
          "opacity": 1,
          "width": 160,
          "zIndex": 10,
        }
      }
      testID="aws-btn-content-view"
    >
      <View
        style={
          Object {
            "backgroundColor": "rgba(0, 0, 0, 0.15)",
            "borderBottomLeftRadius": null,
            "borderBottomRightRadius": null,
            "borderRadius": 4,
            "borderTopLeftRadius": null,
            "borderTopRightRadius": null,
            "bottom": -2,
            "height": 26,
            "left": "1%",
            "position": "absolute",
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": "98%",
          }
        }
        testID="aws-btn-shadow"
      />
      <View
        style={
          Array [
            Object {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
            },
            Object {
              "backgroundColor": "#9f9f9f",
              "borderBottomLeftRadius": null,
              "borderBottomRightRadius": null,
              "borderRadius": 4,
              "borderTopLeftRadius": null,
              "borderTopRightRadius": null,
              "height": 26,
              "width": 160,
            },
          ]
        }
        testID="aws-btn-bottom"
      />
      <View
        style={
          Object {
            "borderBottomLeftRadius": null,
            "borderBottomRightRadius": null,
            "borderRadius": 4,
            "borderTopLeftRadius": null,
            "borderTopRightRadius": null,
            "height": 26,
            "left": 0,
            "position": "absolute",
            "top": 0,
            "transform": Array [
              Object {
                "translateY": 0,
              },
            ],
            "width": 160,
          }
        }
        testID="aws-btn-content"
      >
        <View
          onLayout={[Function]}
          style={
            Array [
              Object {
                "alignItems": "center",
                "flex": 1,
                "justifyContent": "center",
                "overflow": "hidden",
                "zIndex": 3,
              },
              Object {
                "backgroundColor": "#c8e3e7",
                "borderBottomLeftRadius": null,
                "borderBottomRightRadius": null,
                "borderColor": null,
                "borderRadius": 4,
                "borderTopLeftRadius": null,
                "borderTopRightRadius": null,
                "borderWidth": 0,
              },
            ]
          }
          testID="aws-btn-text"
        >
          <View
            style={
              Object {
                "backgroundColor": "rgba(0, 0, 0, 0.15)",
                "height": 26,
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "width": 160,
              }
            }
            testID="aws-btn-active-background"
          />
          <Text
            style={
              Object {
                "color": "#FFFFFF",
                "fontFamily": null,
                "fontSize": 14,
                "fontWeight": "bold",
                "opacity": 1,
                "paddingBottom": 0,
                "paddingHorizontal": 12,
                "paddingTop": 0,
                "textAlign": "center",
                "transform": Array [
                  Object {
                    "scale": 1,
                  },
                ],
                "width": "100%",
                "zIndex": 10,
              }
            }
            testID="aws-btn-content-text"
          >
            Submit
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`App Screens renders the Sign Up screen 1`] = `
<RCTScrollView
  style={
    Object {
      "backgroundColor": "#f0efef",
      "flex": 1,
    }
  }
>
  <View>
    <Text
      style={
        Array [
          Object {
            "color": "#010101",
            "fontStyle": "normal",
            "lineHeight": 30,
            "padding": 30,
            "textAlign": "center",
          },
          Object {
            "fontSize": 35,
          },
        ]
      }
      testID="signup_sign"
    >
      Welcome to Baku!
    </Text>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Full Name
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#00aeef"
        iconName="user"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        label="Full Name"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#00aeef",
              "marginLeft": 56,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Username
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#00aeef"
        iconName="user"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        label="Username"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#00aeef",
              "marginLeft": 56,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Email
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        autoCapitalize="none"
        height={48}
        iconClass={[Function]}
        iconColor="#00aeef"
        iconName="envelope-square"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        label="Email"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#00aeef",
              "marginLeft": 56,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Password
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#00aeef"
        iconName="unlock-alt"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        label="Password"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#00aeef",
              "marginLeft": 56,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      onLayout={[Function]}
      style={
        Array [
          Object {
            "backgroundColor": "white",
            "overflow": "hidden",
            "paddingTop": 16,
          },
          undefined,
          Object {
            "height": 64,
          },
        ]
      }
    >
      <Text />
      <View
        style={
          Array [
            Object {
              "backgroundColor": "#f0f0f0",
              "position": "absolute",
              "top": 8,
              "width": 1,
            },
            Object {
              "height": 48,
              "left": 48,
            },
          ]
        }
      />
      <View
        accessible={true}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "height": 48,
            "left": 56,
            "position": "absolute",
            "top": 24,
          }
        }
      >
        <Text
          style={
            Object {
              "color": "rgba(105, 105, 105, 1)",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Confirm Password
        </Text>
      </View>
      <TextInput
        allowFontScaling={true}
        animationDuration={300}
        height={48}
        iconClass={[Function]}
        iconColor="#00aeef"
        iconName="lock"
        iconSize={20}
        iconWidth={40}
        inputPadding={16}
        label="Confirm Password"
        onBlur={[Function]}
        onChange={[Function]}
        onChangeText={[Function]}
        onFocus={[Function]}
        passiveIconColor="#a3a3a3"
        rejectResponderTermination={true}
        secureTextEntry={true}
        style={
          Array [
            Object {
              "color": "black",
              "flex": 1,
              "fontSize": 18,
              "padding": 7,
              "paddingLeft": 0,
            },
            Object {
              "color": "#00aeef",
              "marginLeft": 56,
            },
            undefined,
          ]
        }
        underlineColorAndroid="transparent"
      />
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingTop": 10,
        }
      }
    >
      <Text
        style={
          Object {
            "color": "red",
            "fontSize": 15,
            "marginVertical": 10,
          }
        }
      >
        
      </Text>
    </View>
    <View
      style={
        Object {
          "alignItems": "center",
          "justifyContent": "center",
          "paddingTop": 10,
        }
      }
    >
      <View
        accessible={true}
        focusable={false}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Object {
            "backgroundColor": "transparent",
            "height": 50,
            "opacity": 1,
            "width": 200,
            "zIndex": 10,
          }
        }
        testID="aws-btn-content-view"
      >
        <View
          style={
            Object {
              "backgroundColor": "rgba(0, 0, 0, 0.15)",
              "borderBottomLeftRadius": null,
              "borderBottomRightRadius": null,
              "borderRadius": 4,
              "borderTopLeftRadius": null,
              "borderTopRightRadius": null,
              "bottom": -2,
              "height": 46,
              "left": "1%",
              "position": "absolute",
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
              "width": "98%",
            }
          }
          testID="aws-btn-shadow"
        />
        <View
          style={
            Array [
              Object {
                "bottom": 0,
                "left": 0,
                "position": "absolute",
              },
              Object {
                "backgroundColor": "#9f9f9f",
                "borderBottomLeftRadius": null,
                "borderBottomRightRadius": null,
                "borderRadius": 4,
                "borderTopLeftRadius": null,
                "borderTopRightRadius": null,
                "height": 46,
                "width": 200,
              },
            ]
          }
          testID="aws-btn-bottom"
        />
        <View
          style={
            Object {
              "borderBottomLeftRadius": null,
              "borderBottomRightRadius": null,
              "borderRadius": 4,
              "borderTopLeftRadius": null,
              "borderTopRightRadius": null,
              "height": 46,
              "left": 0,
              "position": "absolute",
              "top": 0,
              "transform": Array [
                Object {
                  "translateY": 0,
                },
              ],
              "width": 200,
            }
          }
          testID="aws-btn-content"
        >
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "justifyContent": "center",
                  "overflow": "hidden",
                  "zIndex": 3,
                },
                Object {
                  "backgroundColor": "#ffbc27",
                  "borderBottomLeftRadius": null,
                  "borderBottomRightRadius": null,
                  "borderColor": null,
                  "borderRadius": 4,
                  "borderTopLeftRadius": null,
                  "borderTopRightRadius": null,
                  "borderWidth": 0,
                },
              ]
            }
            testID="aws-btn-text"
          >
            <View
              style={
                Object {
                  "backgroundColor": "rgba(0, 0, 0, 0.15)",
                  "height": 46,
                  "left": 0,
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "width": 200,
                }
              }
              testID="aws-btn-active-background"
            />
            <Text
              style={
                Object {
                  "color": "#FFFFFF",
                  "fontFamily": null,
                  "fontSize": 14,
                  "fontWeight": "bold",
                  "opacity": 1,
                  "paddingBottom": 0,
                  "paddingHorizontal": 12,
                  "paddingTop": 0,
                  "textAlign": "center",
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                  "width": "100%",
                  "zIndex": 10,
                }
              }
              testID="aws-btn-content-text"
            >
              Submit
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`App Tabs renders the Search tab 1`] = `
<RCTScrollView
  automaticallyAdjustContentInsets={false}
  contentContainerStyle={
    Object {
      "flexGrow": 1,
    }
  }
  contentInset={
    Object {
      "bottom": 0,
    }
  }
  enableAutomaticScroll={true}
  enableOnAndroid={false}
  enableResetScrollToCoords={false}
  extraHeight={75}
  extraScrollHeight={0}
  getScrollResponder={[Function]}
  handleOnScroll={[Function]}
  innerRef={[Function]}
  keyboardDismissMode="on-drag"
  keyboardOpeningTime={250}
  keyboardShouldPersistTaps="handled"
  keyboardSpace={0}
  onMomentumScrollEnd={[Function]}
  onScroll={[Function]}
  resetKeyboardSpace={[Function]}
  scrollEventThrottle={16}
  scrollForExtraHeightOnAndroid={[Function]}
  scrollIntoView={[Function]}
  scrollToEnd={[Function]}
  scrollToFocusedInput={[Function]}
  scrollToPosition={[Function]}
  showsVerticalScrollIndicator={true}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "flex": 1,
      "paddingBottom": 0,
    }
  }
  update={[Function]}
  viewIsInsideTabBar={false}
>
  <View>
    <View
      style={
        Object {
          "backgroundColor": "#ffffff",
          "flex": 1,
          "paddingBottom": 0,
        }
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "#FFFF",
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "backgroundColor": "#478a91",
              "borderRadius": 2,
              "height": 58,
              "marginVertical": 0,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#f0efef",
                "fontSize": 16,
                "fontWeight": "bold",
                "height": 220,
                "marginVertical": 34,
                "textAlign": "center",
              }
            }
          >
            Search
          </Text>
        </View>
        <Text
          style={
            Array [
              Object {
                "color": "#010101",
                "fontStyle": "normal",
                "lineHeight": 30,
                "padding": 30,
                "textAlign": "center",
              },
              Object {
                "fontSize": 25,
              },
            ]
          }
        >
          Where would you like to go?
        </Text>
        <View
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "paddingTop": 10,
            }
          }
        >
          <View
            style={
              Array [
                Object {
                  "display": "flex",
                  "flexDirection": "column",
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "flexWrap": "wrap",
                  "marginVertical": 4,
                },
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFF",
                  "borderColor": "#FFFF",
                  "color": "#FFFF",
                  "flexDirection": "row",
                  "flexGrow": 0,
                  "flexShrink": 0,
                  "flexWrap": "wrap",
                  "justifyContent": "flex-start",
                  "paddingLeft": 12,
                  "paddingRight": "5%",
                  "paddingVertical": 13,
                  "width": "100%",
                },
              ]
            }
          >
            <Text />
            <TextInput
              allowFontScaling={true}
              autoCorrect={false}
              keyboardType="default"
              onBlur={[Function]}
              onChangeText={[Function]}
              onFocus={[Function]}
              placeholder="Search by country"
              placeholderTextColor="#acada9"
              rejectResponderTermination={true}
              style={
                Array [
                  Object {
                    "borderColor": "#129a8d",
                    "borderRadius": 6,
                    "borderWidth": 1,
                    "flexGrow": 2,
                    "fontSize": 10,
                    "height": 42,
                    "lineHeight": 12,
                    "maxWidth": "100%",
                    "paddingLeft": 40,
                    "textDecorationLine": "none",
                  },
                  undefined,
                ]
              }
              underlineColorAndroid="transparent"
              value=""
            />
          </View>
          <View
            onLayout={[Function]}
          />
          <View
            style={
              Object {
                "alignItems": "center",
                "justifyContent": "center",
                "paddingTop": 10,
              }
            }
          >
            <View
              accessible={true}
              focusable={false}
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "backgroundColor": "transparent",
                  "height": 50,
                  "opacity": 1,
                  "width": 200,
                  "zIndex": 10,
                }
              }
              testID="aws-btn-content-view"
            >
              <View
                style={
                  Object {
                    "backgroundColor": "rgba(0, 0, 0, 0.15)",
                    "borderBottomLeftRadius": null,
                    "borderBottomRightRadius": null,
                    "borderRadius": 4,
                    "borderTopLeftRadius": null,
                    "borderTopRightRadius": null,
                    "bottom": -2,
                    "height": 46,
                    "left": "1%",
                    "position": "absolute",
                    "transform": Array [
                      Object {
                        "translateY": 0,
                      },
                    ],
                    "width": "98%",
                  }
                }
                testID="aws-btn-shadow"
              />
              <View
                style={
                  Array [
                    Object {
                      "bottom": 0,
                      "left": 0,
                      "position": "absolute",
                    },
                    Object {
                      "backgroundColor": "#9f9f9f",
                      "borderBottomLeftRadius": null,
                      "borderBottomRightRadius": null,
                      "borderRadius": 4,
                      "borderTopLeftRadius": null,
                      "borderTopRightRadius": null,
                      "height": 46,
                      "width": 200,
                    },
                  ]
                }
                testID="aws-btn-bottom"
              />
              <View
                style={
                  Object {
                    "borderBottomLeftRadius": null,
                    "borderBottomRightRadius": null,
                    "borderRadius": 4,
                    "borderTopLeftRadius": null,
                    "borderTopRightRadius": null,
                    "height": 46,
                    "left": 0,
                    "position": "absolute",
                    "top": 0,
                    "transform": Array [
                      Object {
                        "translateY": 0,
                      },
                    ],
                    "width": 200,
                  }
                }
                testID="aws-btn-content"
              >
                <View
                  onLayout={[Function]}
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flex": 1,
                        "justifyContent": "center",
                        "overflow": "hidden",
                        "zIndex": 3,
                      },
                      Object {
                        "backgroundColor": "#ffbc27",
                        "borderBottomLeftRadius": null,
                        "borderBottomRightRadius": null,
                        "borderColor": null,
                        "borderRadius": 4,
                        "borderTopLeftRadius": null,
                        "borderTopRightRadius": null,
                        "borderWidth": 0,
                      },
                    ]
                  }
                  testID="aws-btn-text"
                >
                  <View
                    style={
                      Object {
                        "backgroundColor": "rgba(0, 0, 0, 0.15)",
                        "height": 46,
                        "left": 0,
                        "opacity": 0,
                        "position": "absolute",
                        "top": 0,
                        "width": 200,
                      }
                    }
                    testID="aws-btn-active-background"
                  />
                  <Text
                    style={
                      Object {
                        "color": "#FFFFFF",
                        "fontFamily": null,
                        "fontSize": 14,
                        "fontWeight": "bold",
                        "opacity": 1,
                        "paddingBottom": 0,
                        "paddingHorizontal": 12,
                        "paddingTop": 0,
                        "textAlign": "center",
                        "transform": Array [
                          Object {
                            "scale": 1,
                          },
                        ],
                        "width": "100%",
                        "zIndex": 10,
                      }
                    }
                    testID="aws-btn-content-text"
                  >
                    Let\`'\`s Explore
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
        <RCTScrollView
          data={Array []}
          disableVirtualization={false}
          getItem={[Function]}
          getItemCount={[Function]}
          horizontal={false}
          initialNumToRender={10}
          keyExtractor={[Function]}
          maxToRenderPerBatch={10}
          numColumns={1}
          onContentSizeChange={[Function]}
          onEndReachedThreshold={2}
          onLayout={[Function]}
          onMomentumScrollEnd={[Function]}
          onScroll={[Function]}
          onScrollBeginDrag={[Function]}
          onScrollEndDrag={[Function]}
          removeClippedSubviews={false}
          renderItem={[Function]}
          scrollEventThrottle={50}
          stickyHeaderIndices={Array []}
          updateCellsBatchingPeriod={50}
          viewabilityConfigCallbackPairs={Array []}
          windowSize={21}
        >
          <View />
        </RCTScrollView>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`App renders the loading screen 1`] = `null`;

exports[`App renders the root without loading screen 1`] = `
<AppNavigator
  loggedIn={false}
/>
`;
